// Vitest Snapshot v1

exports[`snapshots > empty 1`] = `
"<div class=\\"grid grid-cols-3 mx-10\\">
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">score:</span><span></span></div>
  <div></div>
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">des vies:</span><span></span></div>
</div>"
`;

exports[`snapshots > score and lives prop changes 1`] = `
"<div class=\\"grid grid-cols-3 mx-10\\">
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">score:</span><span>0</span></div>
  <div></div>
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">des vies:</span><span>0</span></div>
</div>"
`;

exports[`snapshots > score and lives prop changes 2`] = `
"<div class=\\"grid grid-cols-3 mx-10\\">
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">score:</span><span>1</span></div>
  <div></div>
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">des vies:</span><span>3</span></div>
</div>"
`;

exports[`snapshots > score and lives prop changes 3`] = `
"<div class=\\"grid grid-cols-3 mx-10\\">
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">score:</span><span>7312</span></div>
  <div></div>
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">des vies:</span><span>-8312</span></div>
</div>"
`;

exports[`snapshots > score and lives prop changes 4`] = `
"<div class=\\"grid grid-cols-3 mx-10\\">
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">score:</span><span>-62</span></div>
  <div></div>
  <div class=\\"justify-self-center w-1/2\\"><span class=\\"mr-1\\">des vies:</span><span>81</span></div>
</div>"
`;
